<resources>
    <string name="app_name">SamplePostApp</string>
    <string name="posts">Posts</string>
    <string name="detail">Detail</string>
    <string name="post_image">Post Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone (Example: 5078523067)</string>
    <string name="if_you_are_already_sign_up">If you are already sign up?</string>
    <string name="login">Login</string>
    <string name="password">Password (min length must be 6)</string>
    <string name="don_t_have_an_sign_up_yet">Don\'t have an sign up yet?</string>
    <string name="login_password">Password</string>
    <string name="comments">Comments</string>
    <string name="no_internet_connection">(No Internet Connection)</string>
    <string name="retry">Retry</string>
    <string name="sample_post_app">Sample Post App</string>
</resources>