<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.PostListFragment">


        <TextView
            android:id="@+id/postsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRW"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postsTitle" />

        <ProgressBar
            android:id="@+id/postLoadingProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/postsRW"
            app:layout_constraintEnd_toEndOf="@+id/postsRW"
            app:layout_constraintStart_toStartOf="@+id/postsRW"
            app:layout_constraintTop_toTopOf="@+id/postsRW" />

        <TextView
            android:id="@+id/noInternetText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection"
            android:textAlignment="center"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/retryButton"
            app:layout_constraintEnd_toStartOf="@+id/retryButton"
            app:layout_constraintStart_toEndOf="@+id/postsTitle"
            app:layout_constraintTop_toTopOf="@+id/retryButton" />

        <Button
            android:id="@+id/retryButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/postsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/postsTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>